fix - fixed z-index of alert to bring it on top of modal

--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -8,7 +8,7 @@
   bottom: 0;
   background-color: rgba(#303030, 0.6);
   backdrop-filter: blur(1px);
-  z-index: 500;
+  z-index: 100;
   cursor: pointer;
 }
 
@@ -21,7 +21,7 @@
   transform: translate(-50%, -50%);
   padding: 3rem;
   background: $color-white;
-  z-index: 500;
+  z-index: 100;
   border-radius: var(--border-radius-md);
   cursor: auto;
   overflow: hidden;
